--- a/shop/templates/shop/product/list.html
+++ b/shop/templates/shop/product/list.html
@@ -24,7 +24,7 @@
         {% for product in products %}
             <div class="item">
                 <a href="{{ product.get_absolute_url }}">
-                    <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no_image.png" %}{% endif %}">
+                    <img class="my_img" src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no_image_LX.png" %}{% endif %}">
                 </a>
                 <a href="{{ product.get_absolute_url }}">{{ product.name }}</a><br>
                 {{ product.price }} руб.
